Link fix to Contact Deletion article

--- a/docs/salesforce/marketing-cloud-engagement/config/licence-limits.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/licence-limits.mdx
@@ -253,7 +253,7 @@ A neat way to do it is to leverage the [Mobile List export trick](/docs/salesfor
 
 Finally, you should always manage your Contact Count by regularly deleting contacts that are no longer needed for your marketing goals. Find records with invalid Subscriber keys, missing channel information, hard bounces, or a long-lasting lack of engagement and remove them from your database to keep it clean and lean. It will help with licence costs, platform performance, and deliverability. Learn more about proper contact deletion and use a ready-to-use script in my full guide:
 
-<Button link='docs/salesforce/marketing-cloud-engagement/config/contact-deletion.mdx'
+<Button link='/docs/salesforce/marketing-cloud-engagement/config/contact-deletion'
  text='SFMC Contact Deletion Guide'
  newTab='true'
 />
